samples/_failures_safe/1761276060_bc5893_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5abd3244.c: In function ‘dfs’:
./samples/SAFE/__tmp_5abd3244.c:166:9: error: expected identifier or ‘(’ at end of input
  166 |         for (int
      |         ^~~
./samples/SAFE/__tmp_5abd3244.c:166:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5abd3244.c:166:9: error: expected declaration or statement at end of input
